added wavelen/wavenum logic

--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,8 @@
             <h1 id="form_title">LaserTron, Activate!</h1>
         </header> <br>
         <div id="form_div">
-            <form name="mm_mils_form">
-                <h3>Unit Conversions:</h3>
+            <h3>Unit Conversions:</h3>
+            <div name="mm_mils">
                 <input class="input_fld" type="text" inputmode="numeric" name="mm" id="mm" onchange="onChangeFieldDisable(this)">
                 <label for="mm_label" id="mm_label">mm</label>
                 <label for="equal_label" id="equal_label">=</label>
@@ -21,10 +21,23 @@
                 <input class="input_fld" type="text" inputmode="numeric" name="inch" id="inch" hidden="true" readonly">
                 <label for="mils_label" id="mils_label"> mils </label>
                 <label for="inch_label" id="inch_label" hidden="true"> inches </label><br><br>
-                <input type="button" id="submit_btn" value="Calculate" onclick="validateValues();">
-                <input type="button" id="clear_btn" value="Clear" onclick="clearValues();">
-                <h6 hidden>Test</h6>
-            </form>
+                <input type="button" id="submit_btn" value="Calculate" onclick="validateValues('mm', 'mils', 'mm_mils_error');">
+                <input type="button" id="clear_btn" value="Clear" onclick="clearValues('mm;mils;inch');">
+                <h5 id="mm_mils_error"></h5>
+            </div>
+            <br>
+            <h3>Calculate Wavenumber and Wavelength:</h3>
+            <div name="wavenum_wavelength">
+                <input class="input_fld" type="text" inputmode="numeric" name="wavelen" id="wavelen" onchange="onChangeFieldDisable(this)">
+                <label for="wavelen_label" id="wavelen_label">nm</label>
+                <label for="equal_label" id="equal_label">=</label>
+                <input class="input_fld" type="text" inputmode="numeric" name="wavenum" id="wavenum" onchange="onChangeFieldDisable(this)">
+                <label for="wavenum_label" id="wavenum_label">cm<sup>-1</sup></label>
+                <br><br>
+                <input type="button" id="calculate_btn" value="Calculate" onclick="validateValues('wavelen','wavenum','wave_props_error');">
+                <input type="button" id="clear_btn" value="Clear" onclick="clearValues('wavenum;wavelen');">
+                <h5 id="wave_props_error"></h5>
+            </div>
         </div>
     </body>
 </html>
