--- a/views/style.css
+++ b/views/style.css
@@ -11,7 +11,7 @@ body{
     background-color: #d1dfff;
 }
 
-form{
+div{
     text-align: center;
     padding: 20px 20px 20px 20px;
     background-color: #f6f9ff;
@@ -25,4 +25,9 @@ form{
 
 h3{
     margin-top: 0;
+}
+
+h5{
+    color: red;
+    margin: 10px 0 0 0;
 }
