--- a/views/style.css
+++ b/views/style.css
@@ -15,19 +15,20 @@ div{
     text-align: center;
     padding: 20px 20px 20px 20px;
     background-color: #f6f9ff;
-    border: 3px solid #f6f9ff;
+    border: 3px solid f6f9ff;
     border-radius: 20px;
+}
+
+#main_div{
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
 
 .input_fld{
     width: 120px;
 }
 
-h3{
-    margin-top: 0;
-}
-
-h5{
-    color: red;
-    margin: 10px 0 0 0;
+hr{
+    border-color: black;
+    width: 30%;
 }
